Changing the title of Anca's session

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -416,7 +416,7 @@
       "description": "In this session I will be talking about how research fits with your plan of building and shipping your product, why you should do research in the first place and what to do when you don't have a customer database to talk to.\n\n",
       "language": "English",
       "speakers": ["anca"],
-      "title": "You are not your customers",
+      "title": "You are not the user. A story told by User Research",
       "tags": ["Associated Technologies"]
     },
     "112": {
